reflect-demo/tests/success/reflect_without_serde.rs
#[derive(reflect::Reflect)]
struct MyStruct {
    field: u32,
}

fn main() {}
