reflect-demo/tests/errors/invalid_serde_attributes.rs
#[derive(serde::Deserialize, reflect_derive::Reflect)]
struct MyStruct {
    #[serde(unknown_attributes)]
    field: u32,
}

fn main() {}
